--- a/app/src/main/res/layout/activity_snow_report.xml
+++ b/app/src/main/res/layout/activity_snow_report.xml
@@ -4,134 +4,247 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg_gradient"
     tools:context=".SnowReportActivity">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/snowConditionsCardView"
-        android:layout_width="match_parent"
-        android:layout_height="230dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginRight="8dp"
-        app:cardCornerRadius="5dp"
-        app:cardElevation="15dp"
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="400dp"
+        android:layout_height="76dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/snowReportHeading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Snow Report"
+        android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sledgeImageView">
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/windSpeedJson"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="310dp"
-            android:layout_marginTop="195dp"
-            android:clickable="true"
-            android:focusable="auto" />
+    <TextView
+        android:id="@+id/resortConditionsJson"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        android:text="resort condtions"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.039"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/snowReportHeading" />
 
-        <TextView
-            android:id="@+id/lastSnowHeading"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="180dp"
-            android:layout_marginTop="105dp"
-            android:text="Last Snowfall:" />
+    <TextView
+        android:id="@+id/topDepthHeading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="11dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="5dp"
+        android:text="Top Depth: "
+        app:layout_constraintEnd_toStartOf="@+id/topDepthJson"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/accessDepthHeading" />
 
-        <TextView
-            android:id="@+id/newSnowJson"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="310dp"
-            android:layout_marginTop="85dp"
-            android:text=" " />
+    <TextView
+        android:id="@+id/freezeHeading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="76dp"
+        android:layout_marginEnd="5dp"
+        android:text="Freeze Level: "
+        app:layout_constraintEnd_toStartOf="@+id/freezelvlJson"
+        app:layout_constraintTop_toBottomOf="@+id/snowReportHeading" />
 
-        <TextView
-            android:id="@+id/lastSnowJson"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="310dp"
-            android:layout_marginTop="105dp" />
+    <TextView
+        android:id="@+id/rainFallingJson"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="28dp"
+        android:text="rain json"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/freezelvlJson" />
 
-        <TextView
-            android:id="@+id/newSnowHeading"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="180dp"
-            android:layout_marginTop="85dp"
-            android:text="New Snow:" />
+    <TextView
+        android:id="@+id/freezelvlJson"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="76dp"
+        android:layout_marginEnd="28dp"
+        android:text="frze json"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/snowReportHeading" />
 
-        <TextView
-            android:id="@+id/baseMountJson"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="310dp"
-            android:layout_marginTop="65dp"
-            android:text=" " />
+    <TextView
+        android:id="@+id/percentageHeading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="5dp"
+        android:text="Percentage Open: "
+        app:layout_constraintEnd_toStartOf="@+id/percentOpenJson"
+        app:layout_constraintTop_toBottomOf="@+id/visibilityHeading" />
 
-        <TextView
-            android:id="@+id/midMountJson"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="310dp"
-            android:layout_marginTop="45dp"
-            android:text=" " />
+    <TextView
+        android:id="@+id/snowFallingJson"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="28dp"
+        android:text="snowfall json"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rainFallingJson" />
 
-        <TextView
-            android:id="@+id/topMountJson"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="310dp"
-            android:layout_marginTop="25dp"
-            android:text=" " />
+    <TextView
+        android:id="@+id/visibilityHeading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="5dp"
+        android:text="Visibility: "
+        app:layout_constraintEnd_toStartOf="@+id/percentOpenJson"
+        app:layout_constraintTop_toBottomOf="@+id/snowFallingHeading" />
 
-        <TextView
-            android:id="@+id/depthHeading"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="310dp"
-            android:layout_marginTop="5dp"
-            android:text="Depth(cm)" />
+    <TextView
+        android:id="@+id/visibiltyJson"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="28dp"
+        android:text="vis json"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/snowFallingJson" />
 
-        <TextView
-            android:id="@+id/bottomMountainHeading"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="180dp"
-            android:layout_marginTop="65dp"
-            android:text="Bottom Mountain:" />
+    <TextView
+        android:id="@+id/percentOpenJson"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="28dp"
+        android:text="prctge json"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/visibiltyJson" />
 
-        <TextView
-            android:id="@+id/midMountainHeading"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="180dp"
-            android:layout_marginTop="45dp"
-            android:text="Mid Mountain:" />
+    <TextView
+        android:id="@+id/rainHeading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="5dp"
+        android:text="Rain Falling: "
+        app:layout_constraintEnd_toStartOf="@+id/rainFallingJson"
+        app:layout_constraintTop_toBottomOf="@+id/freezeHeading" />
 
-        <ImageView
-            android:id="@+id/weatherImage"
-            android:layout_width="169dp"
-            android:layout_height="119dp"
-            android:layout_marginTop="8dp"
-            android:contentDescription="image of snowboarder"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/welcomeText"
-            app:srcCompat="@android:drawable/picture_frame" />
+    <TextView
+        android:id="@+id/snowFallingHeading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="5dp"
+        android:text="Snow Falling: "
+        app:layout_constraintEnd_toStartOf="@+id/visibiltyJson"
+        app:layout_constraintTop_toBottomOf="@+id/rainHeading" />
 
-        <TextView
-            android:id="@+id/currentWeatherText"
-            android:layout_width="match_parent"
-            android:layout_height="59dp"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="135dp"
-            android:text="Current Weather" />
+    <TextView
+        android:id="@+id/accessDepthJson"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="20dp"
+        android:text="accessJson"
+        app:layout_constraintStart_toEndOf="@+id/accessDepthHeading"
+        app:layout_constraintTop_toBottomOf="@+id/resortConditionsJson" />
 
-        <TextView
-            android:id="@+id/topMountainHeading"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="180dp"
-            android:layout_marginTop="25dp"
-            android:text="Top Mountain:" />
-    </androidx.cardview.widget.CardView>
+    <TextView
+        android:id="@+id/reportDateJson"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="2dp"
+        android:text="rptDJson"
+        app:layout_constraintStart_toEndOf="@+id/reportDateHeading"
+        app:layout_constraintTop_toBottomOf="@+id/reportTimeJson" />
+
+    <TextView
+        android:id="@+id/newSnowJson"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="2dp"
+        android:text="newsnowJson"
+        app:layout_constraintStart_toEndOf="@+id/newSnowHeading"
+        app:layout_constraintTop_toBottomOf="@+id/topDepthJson" />
+
+    <TextView
+        android:id="@+id/reportTimeJson"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="2dp"
+        android:text="rptTJson"
+        app:layout_constraintStart_toEndOf="@+id/reportTimeHeading"
+        app:layout_constraintTop_toBottomOf="@+id/newSnowJson" />
+
+    <TextView
+        android:id="@+id/newSnowHeading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="11dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="5dp"
+        android:text="New Snow: "
+        app:layout_constraintEnd_toStartOf="@+id/newSnowJson"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/topDepthHeading" />
+
+    <TextView
+        android:id="@+id/topDepthJson"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="2dp"
+        android:text="topJson"
+        app:layout_constraintStart_toEndOf="@+id/topDepthHeading"
+        app:layout_constraintTop_toBottomOf="@+id/accessDepthJson" />
+
+    <TextView
+        android:id="@+id/reportDateHeading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="11dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="5dp"
+        android:text="Report Date: "
+        app:layout_constraintEnd_toStartOf="@+id/reportDateJson"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/reportTimeHeading" />
+
+    <TextView
+        android:id="@+id/reportTimeHeading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="11dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="5dp"
+        android:text="Report Time: "
+        app:layout_constraintEnd_toStartOf="@+id/reportTimeJson"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/newSnowHeading" />
+
+    <TextView
+        android:id="@+id/accessDepthHeading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="11dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="5dp"
+        android:text="Access Depth: "
+        app:layout_constraintEnd_toStartOf="@+id/accessDepthJson"
+        app:layout_constraintHorizontal_bias="0.666"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/resortConditionsJson" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
