--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -130,9 +130,11 @@
             android:layout_weight="1"
             android:background="#3CF1EBF1"
             android:clickable="true"
+            android:onClick="goToSnowReport"
             android:gravity="center"
             android:orientation="vertical"
-            android:padding="8dp">
+            android:padding="8dp"
+            android:focusable="true">
 
             <ImageView
                 android:id="@+id/snowImage"
@@ -142,7 +144,7 @@
                 android:tint="#FFFFFF"
                 android:clickable="true"
                 android:onClick="goToSnowReport"
-                />
+                android:focusable="true" />
 
             <Space
                 android:layout_width="wrap_content"
